--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -21,6 +21,10 @@ body {
   .Display {
     font-size: var(--Heading-font-size);
   }
+
+  .Notification__title__text {
+    word-break: break-all;
+  }
 }
 
 // Layout
@@ -49,7 +53,7 @@ body {
 }
 
 .LayoutContent {
-  --sds-window-width-max: #{pxToRem(672px)};
+  --sds-window-width-max: #{pxToRem(calc(672px + 64px))};
 
   padding-top: pxToRem(24px);
   padding-bottom: pxToRem(24px);
@@ -86,4 +90,11 @@ body {
     height: pxToRem(32px);
     color: var(--sds-clr-gray-12);
   }
+}
+
+// Debugger
+.DebuggerCard {
+  padding: pxToRem(16px);
+  border-radius: pxToRem(6px);
+  background-color: var(--sds-clr-gray-03);
 }
